# line-tracer

./: .gitignore  Cargo.toml  README.md
shaders/: combine_frame.frag  copy.frag  emit.frag  emit.geom  emit.vert  font.frag  font.vert  geom.frag  geom.vert  postprocess.frag  postprocess.vert  random.glsl  test.frag  test.vert  zucconi6.glsl
shaders/geom/: arc.glsl  circle.glsl  line.glsl  material.glsl  mod.glsl  ray.glsl
shaders/scene/: emit_caustic_focus.glsl  emit_demo.glsl
src/: emit.rs  font.rs  framebuffer.rs  geometry.rs  main.rs  perf.rs  quad.rs  shader.rs  texture.rs
