[package]
name = "line-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui_glium = "0.23.0"
winit = "0.28.7"
glium = "0.33.0"
ultraviolet = "0.9.2"
image = "0.24.3"
rand = "0.8.5"